--- a/aula38/index.html
+++ b/aula38/index.html
@@ -15,9 +15,9 @@
     <h1>Lorem ipsum dolor sit amet</h1>
 
     <div class="paragrafos">
-     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, quae. </p>
-     <p> Vel adipisci voluptatum dignissimos, cumque dolores labore rem pariatur </p>
-     <p> deserunt consequatur ab qui nobis sequi dolorem corrupti tempore natus maxime? </p>
+     <p class="ps1"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, quae. </p class="ps">
+     <p class="ps2"> Vel adipisci voluptatum dignissimos, cumque dolores labore rem pariatur </p class="ps">
+     <p class="ps3"> deserunt consequatur ab qui nobis sequi dolorem corrupti tempore natus maxime? </p>
     
     </div>
 
